--- a/style/sass/main.sass
+++ b/style/sass/main.sass
@@ -26,3 +26,8 @@ $input-shadow: none
 
 // Import Files
 @import "./index.html"
+@import "./projects.html"
+
+// Global Classes
+.cntr
+    text-align: center
